JS commit. also changed some things in the css and html

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
     <div class="main-container">
         <div class="calculator">
-            <input type="text" class="numberInput" placeholder="0" >
+            <input type="text" id="numberInput" placeholder="0" >
+            <br/>
             <br/>
             <button class="key seven" onclick="press(7)">7</button>
             <button class="key eight" onclick="press(8)">8</button>
             <button class="key nine" onclick="press(9)">9</button>
-            <button class="key clear" onclick="clear()">C</button>
+            <button class="key clear" onclick="erase()">C</button>
             <br/>
             <button class="key four" onclick="press(4)">4</button>
             <button class="key five" onclick="press(5)">5</button>
