--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Quick Calculator</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="shortcut icon" href="">
+        <link rel="shortcut icon" href="images/calc.svg">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <script defer src="script.js"></script>
     </head>
